Fix an error logging along with trivial refactoring